data/data-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: data-app-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: data-app
    servicePort: 2112
